--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -24,7 +24,7 @@
         <button type="submit">Entrar</button>
         <div class="form-link">
             <p>Não possui uma conta?</p>
-            <a href="/signup">Cadastra-se</a>
+            <a href="/signup">Cadastre-se</a>
         </div>
     </form>
 </div>
