--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -36,21 +36,32 @@ header nav img{
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
+
     header{
+        box-shadow: 0px 0px 5px 6px #ccc;
+    }
+
+    header nav{
+        padding: 16px;
+    }
+
+    header nav a{
+        font-family: Roboto;
+        font-size: 1.2rem;
+        font-weight: bold;
+        text-transform: uppercase;
+    }
+
+    header nav button{
+        display: none;
+    }
+
+    .logo-img-header{
         display: none;
     }
 }
 
 @media (max-width: 1025px) {
-
-    header{
-        flex-direction: column;
-        align-items: center;
-    }
-
-    header nav{
-        flex-direction: row;
-    }
 
     header nav a:first-of-type{
         margin-left: 0;
