--- a/src/main/resources/templates/userEdit.html
+++ b/src/main/resources/templates/userEdit.html
@@ -19,13 +19,14 @@
             <div class="row-3">
                 <div class="col-4 align-center">
                     <div style="width: 7vw; height: 7vw">
-                        <div class="avatar"></div>
+                        <img class="avatar" th:if="!${user.getImage()}" src="/img/profilePic.svg" alt="Adicionar nova foto">
+                        <img class="avatar" th:if="${user.getImage()}" th:src="${user.getImage()}" alt="Adicionar nova foto">
                     </div>
                 </div>
                 <div class="col px-2">
                     <h2 class="title" th:text="${user.getName()}"></h2>
-                    <small class="subtitle"><b>Pontuação: </b><span>20 pontos</span></small>
-                    <small class="subtitle"><b>Membro desde: </b><span>16/09/2020</span></small>
+                    <small class="subtitle"><b>Pontuação: </b><span th:text="${user.getScore()}"></span></small>
+                    <small class="subtitle"><b>Membro desde: </b><span th:text="${#dates.format(user.getCreatedAt(), 'dd/MM/yyyy')}"></span></small>
                 </div>
             </div>
             <div class="row">
@@ -51,11 +52,12 @@
             <div class="row">
                 <div class="row px-4">
                     <div class="col-5">
-                        <div style="width: 9vw; height: 9vw">
-                            <div class="avatar justify-center align-center link">
-                                <img width="40%" src="/img/newpicture.svg" alt="Adicionar nova foto">
+                            <div style="width: 7vw; height: 7vw" class="avatar justify-center align-center link">
+                                <img th:if="!${user.getImage()}" width="40%" src="/img/newpicture.svg"
+                                     alt="Adicionar nova foto">
+                                <img class="avatar" th:if="${user.getImage()}" th:src="${user.getImage()}"
+                                     alt="Adicionar nova foto">
                             </div>
-                        </div>
                     </div>
 
                     <div class="col px-4">
