--- a/src/main/resources/static/css/signuplogin.css
+++ b/src/main/resources/static/css/signuplogin.css
@@ -2,11 +2,15 @@ body {
     background-color: var(--light-green);
 }
 
+header .logo-img-header {
+    display: none
+}
+
 .white-background{
     background-color: #FFFFFF;
 
-    height: 480px;
-    width: 680px;
+    height: 450px;
+    width: 730px;
 
     border-radius: 20px;
     margin: 10% auto;
@@ -23,14 +27,16 @@ body {
 }
 
 .white-background form {
+    width: 100%;
     display: flex;
     flex-direction: column;
 }
 
 .white-background form button{
     background-color: var(--dark-green);
-    height: 35px;
-    width: 110px;
+    font-size: 14px;
+    height: 45px;
+    width: 150px;
     margin: 5px auto;
     border-radius: 10px;
     color: white;
@@ -41,9 +47,21 @@ body {
     background-color: var(--light-green);
 }
 
+.white-background .form-control {
+    width: 55%;
+    align-items: flex-start;
+    align-self: center;
+}
+
+.white-background .form-control input {
+    width: 100%;
+}
+
 .white-background > p {
-    font-size: 15px;
-    margin-bottom: 10px;
+    color: var(--darker-gray);
+    font-size: 22px;
+    margin-bottom: 15px;
+    font-weight: bold;
 }
 
 .error-email {
@@ -69,20 +87,14 @@ body {
     color: var(--dark-green);
 }
 
-@media (max-width: 480px) {
-    header{
-        display: none;
-    }
-
+@media (max-width: 750px) {
     .white-background{
-        background-color: #FFFFFF;
-        height: 80%;
         width: 90%;
-        border-radius: 20px;
-        margin: 10% 10%;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
     }
+}
 
+@media (max-width: 480px) {
+    .white-background {
+        margin: 25% auto;
+    }
 }
