--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -24,24 +24,83 @@
                     <a href="/question">Título da pergunta</a>
                 </div>
                 <div class="question-text">
-                    <p>No prédio em que sou síndico está tendo uma discussão durante as reuniões sobre a presença
-                        q...</p>
+                    <p>No prédio em que sou síndico está tendo uma discussão durante as reuniões sobre a presença q...</p>
                 </div>
             </div>
         </div>
-        <div class="comment-card">
-            <div class="comment-left">
-                <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius mi facilisis felis dapibus
-                    commodo. Quisque fringilla elit sed augue ultrices tempor. Proin eu metus.</small>
+        <div class="status-pill bg-danger">
+            <small>Não solucionada</small>
+        </div>
+        <div class="comments">
+            <div class="comment-card">
+                <div class="comment-left">
+                    <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</small>
+                </div>
+                <div class="comment-right">
+                    <small>Bruno Silva</small>
+                </div>
             </div>
-            <div class="comment-right">
-                <small>Bruno Silva</small>
+            <div class="comment-card">
+                <div class="comment-left">
+                    <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</small>
+                </div>
+                <div class="comment-right">
+                    <small>Fulano Jr.</small>
+                </div>
             </div>
         </div>
         <div class="answer-textarea-container">
             <h2>Digite sua resposta</h2>
             <textarea th:disabled="!${#request.userPrincipal}"></textarea>
-            <button class="button-green-ease bg-gray">Enviar</button>
+            <button class="button-default bg-light-green" th:disabled="!${#request.userPrincipal}">Responder pergunta</button>
+        </div>
+        <div class="question-answers">
+            <div class="answer-card">
+                <div class="answer-card-left">
+                    <img alt="Imagem do perfil do usuário" src="img/user.svg"/>
+                    <div class="name-last-access">
+                        <p>Bruno Almeida</p>
+                        <small>2 horas</small>
+                    </div>
+                </div>
+                <div class="answer-card-right">
+                    <div class="question-text">
+                        <p>No prédio em que sou síndico está tendo uma discussão durante as reuniões sobre a presença q...</p>
+                    </div>
+                </div>
+            </div>
+            <div class="comments">
+                <div class="comment-card">
+                    <div class="comment-left">
+                        <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</small>
+                    </div>
+                    <div class="comment-right">
+                        <small>Bruno Silva</small>
+                    </div>
+                </div>
+                <div class="comment-card">
+                    <div class="comment-left">
+                        <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</small>
+                    </div>
+                    <div class="comment-right">
+                        <small>Fulano Jr.</small>
+                    </div>
+                </div>
+            </div>
+            <div class="answer-card">
+                <div class="answer-card-left">
+                    <img alt="Imagem do perfil do usuário" src="img/user.svg"/>
+                    <div class="name-last-access">
+                        <p>Bruno Almeida</p>
+                        <small>2 horas</small>
+                    </div>
+                </div>
+                <div class="answer-card-right">
+                    <div class="question-text">
+                        <p>No prédio em que sou síndico está tendo uma discussão durante as reuniões sobre a presença q...</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 </div>
