--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,6 +26,7 @@
     <aside>
     </aside>
     <main class="main-content">
+        <img src="img/logo.svg" id="mobile-icon"/>
         <h1>Confira as perguntas mais recentes</h1>
         <div class="question-card">
             <div class="card-left">
