--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -48,10 +48,14 @@ header nav img{
     border-color: #FFFFFF;
 }
 
+#profile-anchor-link{
+    display: none;
+}
+
 @media (min-width: 320px) and (max-width: 480px) {
 
     header{
-        box-shadow: 0px 0px 5px 3px #ccc;
+        box-shadow: 0 0 5px 3px #ccc;
     }
 
     header nav{
@@ -59,7 +63,7 @@ header nav img{
     }
 
     header nav a{
-        font-family: Roboto;
+        font-family: Roboto, sans-serif;
         font-size: 1.2rem;
         font-weight: bold;
         text-transform: uppercase;
@@ -71,6 +75,10 @@ header nav img{
 
     .logo-img-header{
         display: none;
+    }
+
+    #profile-anchor-link{
+        display: block;
     }
 }
 
