--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,8 +1,8 @@
-aside{
+aside {
     width: 25%;
 }
 
-.index-anon{
+.index-anon {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,7 +12,7 @@ aside{
     background-size: 32em;
 }
 
-.index-anon-text{
+.index-anon-text {
     display: flex;
     margin-top: 5%;
     flex-direction: column;
@@ -20,22 +20,23 @@ aside{
     width: 50%;
 }
 
-.index-anon h1, p{
+.index-anon h1, p {
     color: #FFFFFF;
     text-align: center;
     margin-bottom: 48px;
 }
-.index-anon h1{
+
+.index-anon h1 {
     font-weight: 900;
 }
 
-.index-anon-buttons{
+.index-anon-buttons {
     display: flex;
     flex-direction: row;
     margin-bottom: 80px;
 }
 
-.index-anon-buttons button{
+.index-anon-buttons button {
     background-color: #FFFFFF;
     height: 58px;
     width: 278px;
@@ -46,13 +47,13 @@ aside{
     transition: background-color, opacity, color, 400ms ease;
 }
 
-.index-anon-buttons button:hover{
+.index-anon-buttons button:hover {
     background-color: var(--darker-green);
     opacity: 60%;
     color: #FFFFFF;
 }
 
-.main-content{
+.main-content {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -60,34 +61,34 @@ aside{
     width: 100%;
 }
 
-.main-content h1{
+.main-content h1 {
     font-weight: bold;
     text-align: center;
     margin-bottom: 64px;
 }
 
-.question-card{
+.question-card {
     padding: 16px;
     display: flex;
     border-radius: 10px;
     flex-direction: row;
     width: 80%;
-    box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.25);
+    box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.25);
     margin-bottom: 2em;
     justify-content: space-between;
 }
 
-.question-card p{
+.question-card p {
     color: var(--dark-green)
 }
 
-.card-left{
+.card-left {
     display: flex;
     flex-direction: column;
     width: max-content;
 }
 
-.card-right{
+.card-right {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -96,93 +97,94 @@ aside{
     width: min-content;
 }
 
-.card-right p{
+.card-right p {
     font-family: Open Sans, sans-serif;
     margin: 0;
     color: var(--darker-green);
 }
 
-.card-right p:first-child{
+.card-right p:first-child {
     font-size: 1.5rem;
 }
 
-.card-right small{
+.card-right small {
     font-family: Open Sans, sans-serif;
     margin: 0;
     color: var(--darker-gray);
     text-align: center;
 }
 
-.question-title{
+.question-title {
     display: inline-flex;
     justify-content: space-between;
     margin-bottom: 0.3rem;
 }
 
-.question-title a{
+.question-title a {
     color: var(--darker-green);
     text-decoration: none;
 }
 
-.question-creator{
+.question-creator {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    margin-top: 1rem;
 }
 
-.question-creator img{
+.question-creator img {
     width: auto;
     height: 100%;
 }
 
-.question-creator p{
+.question-creator p {
     margin: 0;
 }
 
-.question-text{
+.question-text {
     display: flex;
     justify-content: start;
 }
 
-.question-text p{
+.question-text p {
     color: var(--darker-gray);
     text-align: justify;
     margin-bottom: 0.8rem;
 }
 
-.name-last-access{
+.name-last-access {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     margin-left: 4px;
 }
 
-.name-last-access p{
+.name-last-access p {
     color: #000000;
 }
 
-.name-last-access small{
+.name-last-access small {
     color: var(--darker-gray);
 }
 
-.question-card-divider{
+.question-card-divider {
     display: flex;
     flex-direction: column;
     align-self: center;
     height: 80%;
-    border-left:1px solid #BEBEBE;
-    border-right:1px solid #BEBEBE;
+    border-left: 1px solid #BEBEBE;
+    border-right: 1px solid #BEBEBE;
     margin: 0 8px 0 8px;
 }
 
-.card-right-text{
+.card-right-text {
     display: flex;
     flex-direction: column;
     white-space: nowrap;
 }
 
-.status-pill{
+.status-pill {
     border-radius: 500px;
     display: flex;
     flex-direction: column;
@@ -195,13 +197,13 @@ aside{
     margin-bottom: 0.5rem;
 }
 
-.status-pill small{
+.status-pill small {
     text-align: center;
     color: #FFFFFF;
     font-weight: bolder;
 }
 
-#mobile-icon{
+#mobile-icon {
     display: none;
     width: 12rem;
     height: auto;
@@ -209,46 +211,46 @@ aside{
 }
 
 @media (max-width: 1500px) {
-    .index-anon{
+    .index-anon {
         background: var(--light-green);
     }
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
 
-    aside{
+    aside {
         display: none;
     }
 
-    main{
+    main {
         width: 100vw;
     }
 
-    .index-anon{
+    .index-anon {
         display: none;
     }
 
-    .question-card{
+    .question-card {
         width: 95%;
     }
 
-    .question-text{
+    .question-text {
         display: none;
     }
 
-    .question-creator{
+    .question-creator {
         justify-content: flex-start;
     }
 
-    .question-creator img{
+    .question-creator img {
         display: none;
     }
 
-    .name-last-access{
+    .name-last-access {
         margin: 0;
     }
 
-    #mobile-icon{
+    #mobile-icon {
         display: block;
     }
 }
