Fix: link para perguntar.

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -13,7 +13,7 @@
                 <img class="logo-img-header" alt="Logo Townsq" src="/img/logo.svg" />
             </div>
             <a href="/" id="index-anchor">Início</a>
-            <a href="/user/edit" id="ask-anchor">Perguntar</a>
+            <a href="#" id="ask-anchor">Perguntar</a>
             <a sec:authorize="isAnonymous()" href="/user/edit" id="profile-anchor-link">Perfil</a>
             <a sec:authorize="isAuthenticated()" href="/user/edit" id="profile-anchor">
                 <img src="img/user.svg" alt="Imagem de perfil"/>
