--- a/src/main/resources/templates/userEdit.html
+++ b/src/main/resources/templates/userEdit.html
@@ -19,14 +19,17 @@
             <div class="row-3">
                 <div class="col-4 align-center">
                     <div style="width: 7vw; height: 7vw">
-                        <img class="avatar" th:if="!${user.getImage()}" src="/img/profilePic.svg" alt="Adicionar nova foto">
-                        <img class="avatar" th:if="${user.getImage()}" th:src="${user.getImage()}" alt="Adicionar nova foto">
+                        <img class="avatar" th:if="!${user.getImage()}" src="/img/profilePic.svg"
+                             alt="Adicionar nova foto">
+                        <img class="avatar" th:if="${user.getImage()}" th:src="${user.getImage()}"
+                             alt="Adicionar nova foto">
                     </div>
                 </div>
                 <div class="col px-2">
                     <h2 class="title" th:text="${user.getName()}"></h2>
                     <small class="subtitle"><b>Pontuação: </b><span th:text="${user.getScore()}"></span></small>
-                    <small class="subtitle"><b>Membro desde: </b><span th:text="${#dates.format(user.getCreatedAt(), 'dd/MM/yyyy')}"></span></small>
+                    <small class="subtitle"><b>Membro desde: </b><span
+                            th:text="${#dates.format(user.getCreatedAt(), 'dd/MM/yyyy')}"></span></small>
                 </div>
             </div>
             <div class="row">
@@ -51,100 +54,102 @@
             <br>
             <div class="row">
                 <div class="row px-4">
-                    <div class="col-5">
+                    <form role="form" th:action="@{/user/edit}" th:method="post" th:object="${user}">
+                        <div class="col-5">
                             <div style="width: 7vw; height: 7vw" class="avatar justify-center align-center link">
                                 <img th:if="!${user.getImage()}" width="40%" src="/img/newpicture.svg"
                                      alt="Adicionar nova foto">
                                 <img class="avatar" th:if="${user.getImage()}" th:src="${user.getImage()}"
                                      alt="Adicionar nova foto">
                             </div>
-                    </div>
-
-                    <div class="col px-4">
-                        <div class="row justify-space-between">
-                            <div class="form-control">
-                                <label for="name">Nome</label>
-                                <input type="text" name="name" id="name" th:value="${user.getName()}"/>
-                            </div>
-                            <div class="form-control">
-                                <label for="email">Email</label>
-                                <input type="text" name="email" id="email" th:value="${user.getEmail()}"/>
-                            </div>
                         </div>
 
-                        <div class="row justify-space-between">
-                            <div class="form-control">
-                                <label for="company">Empresa</label>
-                                <input type="text" name="company" id="company"/>
-                            </div>
-                            <div class="form-control">
-                                <label for="website">Site</label>
-                                <input type="text" name="website" id="website"/>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col">
+                        <div class="col px-4">
+                            <div class="row justify-space-between">
                                 <div class="form-control">
-                                    <label for="bio">Bio</label>
-                                    <textarea type="text" name="bio" id="bio" th:text="${user.getBio()}" ></textarea>
+                                    <label for="name">Nome</label>
+                                    <input type="text" name="name" id="name" th:value="${user.getName()}"/>
+                                </div>
+                                <div class="form-control">
+                                    <label for="email">Email</label>
+                                    <input type="text" name="email" id="email" th:value="${user.getEmail()}"/>
+                                </div>
+                            </div>
+
+                            <div class="row justify-space-between">
+                                <div class="form-control">
+                                    <label for="company">Empresa</label>
+                                    <input type="text" name="company" id="company"/>
+                                </div>
+                                <div class="form-control">
+                                    <label for="website">Site</label>
+                                    <input type="text" name="website" id="website"/>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col">
+                                    <div class="form-control">
+                                        <label for="bio">Bio</label>
+                                        <textarea type="text" name="bio" id="bio" th:text="${user.getBio()}"></textarea>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row justify-space-between">
+                                <div class="form-control">
+                                    <label for="curr-password">Senha atual</label>
+                                    <input type="password" name="curr-password" id="curr-password"/>
+                                </div>
+                                <div class="form-control">
+                                    <label for="new-password">Nova senha</label>
+                                    <input type="password" name="new-password" id="new-password"/>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="row justify-space-between">
-                            <div class="form-control">
-                                <label for="curr-password">Senha atual</label>
-                                <input type="password" name="curr-password" id="curr-password"/>
-                            </div>
-                            <div class="form-control">
-                                <label for="new-password">Nova senha</label>
-                                <input type="password" name="new-password" id="new-password"/>
-                            </div>
-                        </div>
-                    </div>
 
+                        <!--                        <div class="col align-center">-->
+                        <!--                            <div class="form-control">-->
+                        <!--                                <div class="form-control">-->
+                        <!--                                    <label for="name" style="font-size: 10pt">Nome</label>-->
+                        <!--                                    <input type="text" name="name" id="name"/>-->
+                        <!--                                </div>-->
+                        <!--                            </div>-->
 
-                    <!--                        <div class="col align-center">-->
-                    <!--                            <div class="form-control">-->
-                    <!--                                <div class="form-control">-->
-                    <!--                                    <label for="name" style="font-size: 10pt">Nome</label>-->
-                    <!--                                    <input type="text" name="name" id="name"/>-->
-                    <!--                                </div>-->
-                    <!--                            </div>-->
+                        <!--                            <div class="form-control">-->
+                        <!--                                <div class="form-control">-->
+                        <!--                                    <label for="email" style="font-size: 10pt">Email</label>-->
+                        <!--                                    <input type="text" name="name" id="email"/>-->
+                        <!--                                </div>-->
+                        <!--                            </div>-->
 
-                    <!--                            <div class="form-control">-->
-                    <!--                                <div class="form-control">-->
-                    <!--                                    <label for="email" style="font-size: 10pt">Email</label>-->
-                    <!--                                    <input type="text" name="name" id="email"/>-->
-                    <!--                                </div>-->
-                    <!--                            </div>-->
+                        <!--                            <div class="form-control">-->
+                        <!--                                <div class="form-control">-->
+                        <!--                                    <label for="bio" style="font-size: 10pt">Bio</label>-->
+                        <!--                                    <textarea type="text" name="name" id="bio"></textarea>-->
+                        <!--                                </div>-->
+                        <!--                            </div>-->
 
-                    <!--                            <div class="form-control">-->
-                    <!--                                <div class="form-control">-->
-                    <!--                                    <label for="bio" style="font-size: 10pt">Bio</label>-->
-                    <!--                                    <textarea type="text" name="name" id="bio"></textarea>-->
-                    <!--                                </div>-->
-                    <!--                            </div>-->
+                        <!--                            <div class="form-control">-->
+                        <!--                                <div class="form-control">-->
+                        <!--                                    <label for="currentPassword" style="font-size: 10pt">Senha atual</label>-->
+                        <!--                                    <input type="text" name="name" id="currentPassword"/>-->
+                        <!--                                </div>-->
+                        <!--                            </div>-->
 
-                    <!--                            <div class="form-control">-->
-                    <!--                                <div class="form-control">-->
-                    <!--                                    <label for="currentPassword" style="font-size: 10pt">Senha atual</label>-->
-                    <!--                                    <input type="text" name="name" id="currentPassword"/>-->
-                    <!--                                </div>-->
-                    <!--                            </div>-->
-
-                    <!--                            <div class="form-control">-->
-                    <!--                                <div class="form-control">-->
-                    <!--                                    <label for="newPassword" style="font-size: 10pt">Nova senha</label>-->
-                    <!--                                    <input type="text" name="name" id="newPassword"/>-->
-                    <!--                                </div>-->
-                    <!--                            </div>-->
+                        <!--                            <div class="form-control">-->
+                        <!--                                <div class="form-control">-->
+                        <!--                                    <label for="newPassword" style="font-size: 10pt">Nova senha</label>-->
+                        <!--                                    <input type="text" name="name" id="newPassword"/>-->
+                        <!--                                </div>-->
+                        <!--                            </div>-->
+                        <button type="submit">Cadastrar</button>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
-</div>
 </div>
 
 </body>
