--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -13,15 +13,15 @@
         <form role="form" th:action="@{/signup}" th:method="post" th:object="${user}">
             <div class="form-control">
                 <label for="name">Nome</label>
-                <input type="text" name="name" id="name"/>
+                <input autofocus required type="text" name="name" id="name"/>
             </div>
             <div class="form-control">
                 <label for="email">Email</label>
-                <input type="email" name="email" id="email"/>
+                <input required type="email" name="email" id="email"/>
             </div>
             <div class="form-control">
                 <label for="password">Senha</label>
-                <input type="password" name="password" id="password"/>
+                <input required type="password" name="password" id="password"/>
             </div>
             <button type="submit">Cadastrar</button>
 
@@ -36,4 +36,5 @@
         </form>
     </div>
 </body>
+
 </html>
