feature: editar senha e remoção de campos não editáveis

--- a/src/main/resources/templates/userEdit.html
+++ b/src/main/resources/templates/userEdit.html
@@ -70,10 +70,10 @@
                                     <label for="name">Nome</label>
                                     <input type="text" name="name" id="name" th:value="${user.getName()}"/>
                                 </div>
-                                <div class="form-control">
+                                <!--<div class="form-control">
                                     <label for="email">Email</label>
                                     <input type="text" name="email" id="email" th:value="${user.getEmail()}"/>
-                                </div>
+                                </div>-->
                             </div>
 
                             <div class="row justify-space-between">
@@ -97,13 +97,13 @@
                             </div>
 
                             <div class="row justify-space-between">
-                                <div class="form-control">
+                                <!--<div class="form-control">
                                     <label for="curr-password">Senha atual</label>
                                     <input type="password" name="curr-password" id="curr-password"/>
-                                </div>
+                                </div>-->
                                 <div class="form-control">
-                                    <label for="new-password">Nova senha</label>
-                                    <input type="password" name="new-password" id="new-password"/>
+                                    <label for="password">Nova senha</label>
+                                    <input type="password" name="password" id="password"/>
                                 </div>
                             </div>
                         </div>
