--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -8,7 +8,9 @@
     <title>Pergunta XYZ</title>
 </head>
 <body>
-<div th:insert="fragments/header.html"></div>
+<header th:replace="fragments/header.html :: header"></header>
+<div th:replace="fragments/toast.html :: toasts" onload="test2">
+</div>
 <div class="justify-center">
     <main class="main-content">
         <div class="question-page-main-card">
