--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -6,7 +6,9 @@
     <title>Usuários</title>
 </head>
 <body>
-    <div th:insert="fragments/header.html"></div>
+    <header th:replace="fragments/header.html :: header"></header>
+    <div th:replace="fragments/toast.html :: toasts" onload="test2">
+    </div>
     <h1>Usuários cadastrados:</h1>
     <div th:each="user: ${users}">
         <p th:text="${user.getId()}"></p>
