fix: removendo o onload

--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header th:replace="fragments/header.html :: header"></header>
-<div th:replace="fragments/toast.html :: toasts" onload="test2">
+<div th:replace="fragments/toast.html :: toasts">
 </div>
 <div class="justify-center">
     <main class="main-content">
