--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header th:replace="fragments/header.html :: header"></header>
-    <div th:replace="fragments/toast.html :: toasts" onload="test2">
+    <div th:replace="fragments/toast.html :: toasts">
     </div>
 <!--    <div th:if="${user}">-->
 <!--        <p th:text="${user.getId()}"></p>-->
