--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header th:replace="fragments/header.html :: header"></header>
-    <div th:replace="fragments/toast.html :: toasts" onload="test2">
+    <div th:replace="fragments/toast.html :: toasts">
     </div>
     <h1>Home</h1>
     <h2>Welcome to the jungle!</h2>
